Clarified documentation, improved CLI help, removed usage of 'preview' level Java features. (#14)
* Clarified documentation, improved CLI help, removed usage of 'preview' level Java features.

* Upgraded upload-artifact action to v4 as per Github requirements.